--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -20,6 +20,7 @@
         </section>
         <section>
             <h2>Services</h2>
+            <p>We work with you</p>
             <h3>Design & Concept</h3>
             <h3>Digital Strategy</h3>
             <h3>Content Strategy</h3>
@@ -29,6 +30,7 @@
         </section>
         <section>
             <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
             <article> 
                 <h3>Interior Design</h3>
             </article>
@@ -41,6 +43,7 @@
         </section>
         <section>
             <h2>About Us</h2>
+            <p>Everything about us</p>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem,
