modif texte Career

--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -65,9 +65,8 @@
             <article>
                 <p>Career</p>
                 <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
-                    Quae contraria sunt his, malane?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat.
+                    Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </article>
             <article>
                 <p>Digital Life</p>
@@ -83,7 +82,6 @@
                     Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum
                     Peripateticis. Prioris generis est docilitas, memoria; Apparet statim,
                     quae sint officia, quae actiones.</p>
-            </article>
             </article>
         </section>
         <section>
