--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -42,7 +42,7 @@
             </article>
         </section>
         <section>
-            <h2>About Us</h2>
+            <h2>About Us
             <p>Everything about us</p>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -59,6 +59,7 @@
                 Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem,
                 sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
                 quibusdam atque maxime cum!</p>
+            </h2>
         </section>
         <section>
             <h2>Latest news</h2>
@@ -93,10 +94,10 @@
         </section>
         <section>
             <h2>Contact</h2>
+            <p>We like to know new people</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
                 Quae contraria sunt his, malane?</p>
-            <p>We like to know new people</p>
         </section>
     </main>
     <footer>
