--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -42,7 +42,7 @@
             </article>
         </section>
         <section>
-            <h2>About Us
+            <h2>About Us</h2>
             <p>Everything about us</p>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -59,7 +59,6 @@
                 Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem,
                 sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
                 quibusdam atque maxime cum!</p>
-            </h2>
         </section>
         <section>
             <h2>Latest news</h2>
