--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -4,32 +4,31 @@
         <meta charset="utf-8" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-        />
+            content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency" />
         <link rel="icon" type="image/x-icon" href="./favicon.ico" />
         <link rel="icon" type="image/png" href="./favicon.png" />
     </head>
     <body>
-
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
                 <nav></nav>
             </div>
         </header>
-
+        <!-- Main -->
         <main>
             <div>
                 <h1>Homepage</h1>
-                
+                <!-- Hero section -->
                 <section>
                     <div>
                         <h2>We help you build your brand!</h2>
                     </div>
                 </section>
-
+                <!-- Services section -->
                 <section>
                     <div>
                         <header>
@@ -46,7 +45,7 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- Works section -->
                 <section>
                     <div>
                         <header>
@@ -66,7 +65,7 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- About Us section -->
                 <section>
                     <div>
                         <header>
@@ -101,7 +100,7 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- Latest news section -->
                 <section>
                     <div>
                         <header>
@@ -148,7 +147,7 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- Testimonials section -->
                 <section>
                     <div>
                         <header>
@@ -162,7 +161,7 @@
                         </div>
                     </div>
                 </section>
-
+                <!-- Contact section -->
                 <section>
                     <div>
                         <header>
@@ -181,7 +180,7 @@
                 </section>
             </div>
         </main>
-
+        <!-- Footer -->
         <footer>
             <div>Footer</div>
         </footer>
