--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -66,12 +66,13 @@
                 </dl>
             </div>
         </section>
+        <!-- Horizontal rule -->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
             </header>
             <div>
-                <hr>
+                <hr />
             </div>
         </section>
     </main>
