--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -124,12 +124,7 @@
                         <div>
                             <article>
                                 <p>Career</p>
-                                <h3>
-                                    <a href="#"
-                                        >Hoc loco tenere se Triarius non
-                                        potuit.</a
-                                    >
-                                </h3>
+                                <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit. Id Sextilius factum
@@ -140,11 +135,7 @@
                             <article>
                                 <p>Digital Life</p>
                                 <h3>
-                                    <a href="#"
-                                        >Ut alios omittam, hunc appello, quem
-                                        ille unum secutus est.</a
-                                    >
-                                </h3>
+                                    <a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit. Tum mihi Piso: Quid ergo?
@@ -156,11 +147,7 @@
                             </article>
                             <article>
                                 <p>Social</p>
-                                <h3>
-                                    <a href="#"
-                                        >Bestiarum vero nullum iudicium puto.</a
-                                    >
-                                </h3>
+                                <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur
                                     adipiscing elit. Non igitur bene. Quid enim
@@ -178,24 +165,32 @@
                     <div>
                         <header>
                             <h2>Testimonials</h2>
-                            <p>We are more than a digital company</p>
+                            <p>
+                                We are more than a digital company
+                            </p>
                         </header>
                         <div>
                             <article>
                                 <blockquote>
-                                    I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                    <p>
+                                        I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                    </p>
                                     <cite>Yuri Y.</cite>
                                 </blockquote>
                             </article>
                             <article>
                                 <blockquote>
-                                    Thank you so much for your help. Techium company is awesome!
+                                    <p>
+                                        Thank you so much for your help. Techium company is awesome!
+                                    </p>
                                     <cite>Dorrie S.</cite>
                                 </blockquote>
                             </article>
                             <article>
                                 <blockquote>
-                                    I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                    <p>
+                                        I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                    </p>
                                     <cite>Sven H.</cite>
                                 </blockquote>
                             </article>
@@ -207,7 +202,9 @@
                     <div>
                         <header>
                             <h2>Contact</h2>
-                            <p>We like to know new people</p>
+                            <p>
+                                We like to know new people
+                            </p>
                         </header>
                         <div>
                             <p>
