--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -131,7 +131,7 @@
                                     negabat. Quo tandem modo? At eum nihili
                                     facit; Quae contraria sunt his, malane?
                                 </p>
-                                <p><small>By Kelly D.</small></p>
+                                <small>By Kelly D.</small>
                             </article>
                             <article>
                                 <p>Digital Life</p>
@@ -145,7 +145,7 @@
                                     vidit. Nos commodius agimus. An nisi
                                     populari fama?
                                 </p>
-                                <p><small>By William A.</small></p>
+                                <small>By William A.</small>
                             </article>
                             <article>
                                 <p>Social</p>
@@ -158,7 +158,7 @@
                                     generis est docilitas, memoria; Apparet
                                     statim, quae sint officia, quae actiones.
                                 </p>
-                                <p><small>By Frances J.</small></p>
+                                <small>By Frances J.</small>
                             </article>
                         </div>
                     </div>
@@ -224,8 +224,7 @@
         </main>
         <!-- Footer -->
         <footer>
-            234 Washington Street<br />
-            Urbana, Illinois
+            <adress>234 Washington Street<br>Urbana, Illinois</adress>
             <div>
                 <ul>
                     <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
